[tool.poetry]
name = "mft2es"
version = "1.4.0"
description = "A library for fast import of Windows Master File Table($MFT) into Elasticsearch."
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/sumeshi/mft2es"
homepage = "https://github.com/sumeshi/mft2es"

keywords = ['mft', 'elasticsearch', 'json']

[tool.poetry.scripts]
mft2es = 'mft2es.views.Mft2esView:entry_point'
mft2json = 'mft2es.views.Mft2jsonView:entry_point'

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^7.7.1"
mft = "^0.5.3"
tqdm = "^4.46.1"
urllib3 = "^1.26.5"
orjson = "^3.6.0"
importlib_metadata = "^4.6.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.8.3"
mypy = "^0.780"
black = "^19.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
