[tool.poetry]
name = "mft2es"
version = "1.4.0"
description = "A library for fast import of Windows Master File Table($MFT) into Elasticsearch."
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/sumeshi/mft2es"
homepage = "https://github.com/sumeshi/mft2es"

keywords = ['mft', 'elasticsearch', 'json']

[tool.poetry.scripts]
mft2es = 'mft2es.views.Mft2esView:entry_point'
mft2json = 'mft2es.views.Mft2jsonView:entry_point'

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.11.0"
mft = "^0.6.1"
tqdm = "^4.66.1"
urllib3 = "^2.1.0"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
black = "^23.11.0"
pytest = "^7.4.3"
nuitka = "1.7.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
