[project]
name = "mft2es"
version = "1.5.0"
description = "A library for fast import of Windows Master File Table($MFT) into Elasticsearch."
readme = "README.md"
license = "MIT"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "elasticsearch>=9.0.2",
    "mft>=0.6.1",
    "orjson>=3.10.18",
    "tqdm>=4.67.1",
    "urllib3>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.16.0",
    "nuitka==1.7.10",
    "pytest>=8.4.0",
]

[project.scripts]
mft2es = 'mft2es.views.Mft2esView:entry_point'
mft2json = 'mft2es.views.Mft2jsonView:entry_point'
